--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 	<!--
 	Maintainer: monsterb
 	Contact: UNIX.S3C (at) gmail (dot) com
-	URL: http://monsterb.github.io/ -->
+	URL: https://monsterb.github.io/ -->
 <head>
   	<link href="monsterborg.css" media="screen" rel="stylesheet" type="text/css" />
 	<meta charset="utf-8" />
@@ -25,7 +25,7 @@
           <br />
           <p>Welcome to monsterb | daemons, gnus, and penguins. Oh my! Formerly known as monsterb.org. This retro style site is a link portal dedicated to BSD, Cyber Security, Emulation, Ethical Hacking, FOSS, GNU, illumos, Information Security, Infosec, IT Security, Linux, Podcasting, Programming, Python, Oggcasting, OpenSource, Scripting, Robotics, Unix, Video Games, and beyond.</p>
           <br />
-          <p>Site Updated: April 8, 2017</p>
+          <p>Site Updated: April 10, 2017</p>
 			 <br />
 
 	     </div>
