--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!--
 	Maintainer: monsterb
 	Contact: UNIX.S3C (at) gmail (dot) com
-	URL: http://monsterb.github.io/ -->
+	URL: https://monsterb.github.io/ -->
 <head>
   	<link href="monsterborg.css" media="screen" rel="stylesheet" type="text/css" />
 	<meta charset="utf-8" />
@@ -21,12 +21,13 @@
 	     <a href="/notes/index.html">Notes</a>
 	     </div>
 	      <div id="main">
-          <h3>Main Menu (636):</h3>
+          <h3>Main Menu (649):</h3>
           <br />
           <ul>
           <li><a href="conferences.html">Conferences</a> (45)</li>
           <li><a href="book-pub.html">Book Publishers</a> (6)</li>
           <li><a href="bsd-flavors.html">BSD Flavors</a> (13)</li>
+          <li><a href="robotics.html">DIY Robotics</a> (6)</li>
           <li><a href="cybersecurity.html">Ethical Hacking, Forensics, Infosec, PenTesting</a> (34)</li>
           <li><a href="firewalls.html">Firewalls: Distributions &amp; Front-ends</a> (10)</li>
           <li><a href="gnu-bsd.html">GNU/BSD Distributions: Desktop &amp; Server</a> (3)</li>
@@ -36,12 +37,11 @@
           <li><a href="linuxdistros-infosec.html">Linux Distributions: Information Security</a> (15)</li>
           <li><a href="magazines.html">Magazines</a> (24)</li>
           <li><a href="moble-os.html">Moble Operating Systems</a> (2)</li>
-          <li><a href="podcasts.html">Netcasts, Oggcasts, Podcasts, Webcasts</a> (100)</li>
+          <li><a href="podcasts.html">Netcasts, Oggcasts, Podcasts, Webcasts</a> (102)</li>
           <li><a href="non-foss.html">NON-FOSS Links</a> (187)</li>
-          <li><a href="online-courses.html">Online Courses</a> (60)</li>
+          <li><a href="online-courses.html">Online Courses</a> (62)</li>
           <li><a href="blogs.html">Open Source Tech Blogs, Howtos, Guides, &amp; Tutorials</a> (15)</li>
-          <li><a href="python-programming.html">Python Programming</a> (72)</li>
-          <li><a href="robotics.html">Robotics</a> (4)</li>
+          <li><a href="python-programming.html">Python Programming</a> (80)</li>
           <li><a href="video-gaming.html">Video Gaming: Linux</a> (25)</li>
           </ul>
 	  <br />
