--- a/magazines.html
+++ b/magazines.html
@@ -3,7 +3,7 @@
 <!--
 	Maintainer: monsterb
 	Contact: UNIX.S3C (at) gmail (dot) com
-	URL: http://monsterb.github.io/ -->
+	URL: https://monsterb.github.io/ -->
 <head>
   	<link href="monsterborg.css" media="screen" rel="stylesheet" type="text/css" />
 	<meta charset="utf-8" />
@@ -58,14 +58,14 @@
 
 	  <h3><a id="InfoSec">Information Security</a> (9):</h3>
 	  <p>2600: The Hacker Quarterly <a href="http://www.2600.com/">http://www.2600.com/</a></p>
-          <p>Digital Forensics Magazine <a href="http://www.digitalforensicsmagazine.com/">http://www.digitalforensicsmagazine.com/</a></p>
-          <p>eForensics <a href="https://eforensicsmag.com/">https://eforensicsmag.com/</a></p>
-          <p>Hacker Monthly <a href="http://hackermonthly.com/">http://hackermonthly.com/</a></p>
-          <p>Hakin9 <a href="https://hakin9.org/">https://hakin9.org/</a></p>
-          <p>&#91;HACK&#93;IN&#40;SIGHT&#41; <a href="http://www.hackinsight.org/">http://www.hackinsight.org</a></p>
-          <p>Infosecurity Magazine <a href="http://www.infosecurity-magazine.com/">http://www.infosecurity-magazine.com/</a></p>
-          <p>&#40;IN&#41;SECURE Magazine <a href="http://www.net-security.org/insecuremag.php">http://www.net-security.org/insecuremag.php</a></p>
-          <p>PenTest Magazine <a href="https://pentestmag.com/">https://pentestmag.com/</a></p>
+    <p>Digital Forensics Magazine <a href="http://www.digitalforensicsmagazine.com/">http://www.digitalforensicsmagazine.com/</a></p>
+    <p>eForensics <a href="https://eforensicsmag.com/">https://eforensicsmag.com/</a></p>
+    <p>Hacker Monthly <a href="http://hackermonthly.com/">http://hackermonthly.com/</a></p>
+    <p>Hakin9 <a href="https://hakin9.org/">https://hakin9.org/</a></p>
+    <p>&#91;HACK&#93;IN&#40;SIGHT&#41; <a href="http://www.hackinsight.org/">http://www.hackinsight.org</a></p>
+    <p>Infosecurity Magazine <a href="http://www.infosecurity-magazine.com/">http://www.infosecurity-magazine.com/</a></p>
+    <p>&#40;IN&#41;SECURE Magazine <a href="http://www.net-security.org/insecuremag.php">http://www.net-security.org/insecuremag.php</a></p>
+    <p>PenTest Magazine <a href="https://pentestmag.com/">https://pentestmag.com/</a></p>
 
 	  <br /><br /><br /><br />
 
