--- a/notes/index.html
+++ b/notes/index.html
@@ -3,7 +3,7 @@
 <!--
 	Maintainer: monsterb
 	Contact: UNIX.S3C (at) gmail (dot) com
-	URL: http://monsterb.github.io/ -->
+	URL: https://monsterb.github.io/ -->
 <head>
   	<link href="/monsterborg.css" media="screen" rel="stylesheet" type="text/css" />
 	<meta charset="utf-8" />
