--- a/online-courses.html
+++ b/online-courses.html
@@ -3,7 +3,7 @@
 <!--
 	Maintainer: monsterb
 	Contact: UNIX.S3C (at) gmail (dot) com
-	URL: http://monsterb.github.io/ -->
+	URL: https://monsterb.github.io/ -->
 <head>
   	<link href="monsterborg.css" media="screen" rel="stylesheet" type="text/css" />
 	<meta charset="utf-8" />
@@ -21,17 +21,17 @@
 	     <a href="/notes/index.html">Notes</a>
 	     </div>
 	      <div id="main">
-          <h3>Online Courses (60):</h3>
+          <h3>Online Courses (62):</h3>
           <br />
           <ul>
           <li><a href="online-courses.html#Cloud">Cloud Technologies</a> (1)</li>
-          <li><a href="online-courses.html#Challenges">Code Challenges and Games</a> (4)</li>
+          <li><a href="online-courses.html#Challenges">Code Challenges and Games</a> (5)</li>
           <li><a href="online-courses.html#CS">Computer Science</a> (2)</li>
           <li><a href="online-courses.html#Database">Database</a> (1)</li>
           <li><a href="online-courses.html#DataSci">Data Science</a> (1)</li>
           <li><a href="online-courses.html#InfoSec">Information Security</a> (8)</li>
           <li><a href="online-courses.html#Linux">Linux</a> (1)</li>
-          <li><a href="online-courses.html#Misc">Misc. Online Courses</a> (34)</li>
+          <li><a href="online-courses.html#Misc">Misc. Online Courses</a> (35)</li>
           <li><a href="online-courses.html#WebDev">Web Development</a> (8)</li>
           </ul>
 
@@ -42,11 +42,12 @@
 
           <br /><br /><br /><br />
 
-          <h3><a id="Challenges">Code Challenges and Games</a> (4):</h3>
+          <h3><a id="Challenges">Code Challenges and Games</a> (5):</h3>
           <p>CheckIO <a href="https://checkio.org/">https://checkio.org/</a></p>
           <p>Code Abbey <a href="http://www.codeabbey.com/">http://www.codeabbey.com/</a></p>
           <p>Coderbyte <a href="https://coderbyte.com/">https://coderbyte.com/</a></p>
           <p>CodeCombat <a href="http://codecombat.com/">http://codecombat.com/</a></p>
+          <p>The Python Challenge <a href="http://www.pythonchallenge.com/">http://www.pythonchallenge.com/</a></p>
 
           <br /><br /><br /><br />
 
@@ -86,7 +87,7 @@
 
           <br /><br /><br /><br />
 
-          <h3><a id="Misc">Misc. Online Courses</a> (34):</h3>
+          <h3><a id="Misc">Misc. Online Courses</a> (35):</h3>
           <p>Alison <a href="https://alison.com/">https://alison.com/</a></p>
           <p>CGCircuit <a href="https://www.cgcircuit.com/">https://www.cgcircuit.com/</a></p>
           <p>ChalkStreet <a href="https://www.chalkstreet.com/">https://www.chalkstreet.com/</a></p>
@@ -103,6 +104,7 @@
           <p>FutureLearn <a href="https://www.futurelearn.com/">https://www.futurelearn.com/</a></p>
           <p>Grok Learning <a href="https://groklearning.com/">https://groklearning.com/</a></p>
           <p>Khan Academy <a href="https://www.khanacademy.org/">https://www.khanacademy.org/</a></p>
+          <p>LinkedIn Learning <a href="https://www.linkedin.com/learning/">https://www.linkedin.com/learning/</a></p>
           <p>Lynda.com <a href="http://www.lynda.com/">http://www.lynda.com/</a></p>
           <p>Microsoft Virtual Academy <a href="https://mva.microsoft.com/">https://mva.microsoft.com/</a></p>
           <p>Mozilla Learning Network <a href="https://teach.mozilla.org/">https://teach.mozilla.org/</a></p>
