--- a/podcasts.html
+++ b/podcasts.html
@@ -3,7 +3,7 @@
 <!--
 	Maintainer: monsterb
 	Contact: UNIX.S3C (at) gmail (dot) com
-	URL: http://monsterb.github.io/ -->
+	URL: https://monsterb.github.io/ -->
 <head>
   	<link href="monsterborg.css" media="screen" rel="stylesheet" type="text/css" />
 	<meta charset="utf-8" />
@@ -21,14 +21,14 @@
 	     <a href="/notes/index.html">Notes</a>
 	     </div>
 	      <div id="main">
-          <h3>Netcasts, Oggcasts, Podcasts, Webcasts (100):</h3>
+          <h3>Netcasts, Oggcasts, Podcasts, Webcasts (102):</h3>
           <br />
           <ul>
           <li><a href="podcasts.html#Automotive">Automotive, Auto Racing, Auto Repair</a> (4)</li>
           <li><a href="podcasts.html#BSD">BSD</a> (3)</li>
           <li><a href="podcasts.html#Comedy">Comedy</a> (7)</li>
           <li><a href="podcasts.html#CyberSecurity">Cyber Security, Forensics, Hacking, InfoSec, PenTesting</a> (24)</li>
-          <li><a href="podcasts.html#FOSS">FOSS, Misc. Tech, Open Source, and Programming</a> (10)</li>
+          <li><a href="podcasts.html#FOSS">FOSS, Misc. Tech, Open Source, and Programming</a> (12)</li>
           <li><a href="podcasts.html#Linux">GNU/Linux</a> (23)</li>
           <li><a href="podcasts.html#Hardware">Hardware</a> (2)</li>
           <li><a href="podcasts.htmk#Health">Health and Science</a> (1)</li>
@@ -93,9 +93,11 @@
 
           <br /><br /><br /><br />
 
-          <h3><a id="FOSS">FOSS, Misc. Tech, Open Source, and Programming</a> (10):</h3>
+          <h3><a id="FOSS">FOSS, Misc. Tech, Open Source, and Programming</a> (12):</h3>
           <p>Bad Voltage <a href="http://www.badvoltage.org/">http://www.badvoltage.org/</a></p>
           <p>Blender Podcast <a href="http://blender-podcast.org/">http://blender-podcast.org/</a></p>
+          <p>Channel 9 <a href="https://channel9.msdn.com/">https://channel9.msdn.com/</a></p>
+          <p>CodeNewbie <a href="http://www.codenewbie.org/">http://www.codenewbie.org/</a></p>
           <p>Developer On Fire <a href="http://developeronfire.com/">http://developeronfire.com/</a></p>
           <p>FLOSS Weekly <a href="https://twit.tv/shows/floss-weekly">https://twit.tv/shows/floss-weekly</a></p>
           <p>Geek Speak <a href="http://geekspeak.org">http://geekspeak.org</a></p>
