--- a/python-programming.html
+++ b/python-programming.html
@@ -3,7 +3,7 @@
 <!--
 	Maintainer: monsterb
 	Contact: UNIX.S3C (at) gmail (dot) com
-	URL: http://monsterb.github.io/ -->
+	URL: https://monsterb.github.io/ -->
 <head>
   	<link href="monsterborg.css" media="screen" rel="stylesheet" type="text/css" />
 	<meta charset="utf-8" />
@@ -21,15 +21,15 @@
 	     <a href="/notes/index.html">Notes</a>
 	     </div>
 	      <div id="main">
-          <h3>Python Programming (72):</h3>
+          <h3>Python Programming (80):</h3>
           <br />
           <ul>
           <li><a href="python-programming.html#Blogs">Blogs, Info, News</a> (4)</li>
           <li><a href="python-programming.html#Forums">Forums</a> (1)</li>
           <li><a href="python-programming.html#eBooks">Free eBooks</a> (23)</li>
-          <li><a href="python-programming.html#IDE">(IDE) Integrated Development Environments</a> (5)</li>
+          <li><a href="python-programming.html#IDE">(IDE) Integrated Development Environments &amp; Editors</a> (6)</li>
           <li><a href="python-programming.html#IRC">IRC Channels</a> (2)</li>
-          <li><a href="python-programming.html#Learn">Learn Python Programming</a> * (23)</li>
+          <li><a href="python-programming.html#Learn">Learn Python Programming</a> * (30)</li>
           <li><a href="python-programming.html#Online-Ed">Online Editors</a> (4)</li>
           <li><a href="python-programming.html#VCS">Version Control</a> (7)</li>
           <li><a href="python-programming.html#WebFrameworks">Web Frameworks</a> (3)</li>
@@ -126,8 +126,11 @@
 
           <br /><br /><br /><br />
 
-          <h3><a id="IDE">(IDE) Integrated Development Environments</a> (5):</h3>
+          <h3><a id="IDE">(IDE) Integrated Development Environments &amp; Editors</a> (6):</h3>
           <br />
+          <p><a href="https://atom.io/">Atom</a> is a text editor that's modern, approachable, yet hackable to the core—a tool you can customize to do anything but also use productively without ever touching a config
+            file.</p>
+          <br /><br />
           <p><a href="http://bluefish.openoffice.nl/">Bluefish</a> is a powerful open source editor targeted towards programmers and web-developers, with many options to write websites, scripts and programming code. Bluefish supports many programming and markup languages.</p>
           <br /><br />
           <p><a href="http://www.geany.org/">Geany</a> is an open source text editor using the GTK+ toolkit with basic features of an integrated development environment. It was developed to provide a small and fast IDE, which has only a few dependencies from other packages. It supports many filetypes and has some nice features.</p>
@@ -147,7 +150,7 @@
 
           <br /><br /><br /><br />
 
-          <h3><a id="Learn">Learn Python Programming *</a> (23):</h3>
+          <h3><a id="Learn">Learn Python Programming *</a> (30):</h3>
           <br />
           <p><a href="http://www.afterhoursprogramming.com/">After Hours Programming</a> will teach you the fundamentals of the Python programming language. Earn badges as you increase levels.</p>
 
@@ -166,6 +169,10 @@
           <p><a href="https://developers.google.com/edu/python/">Google's Python Class</a> (Python 2) is a free class for people with a little bit of programming experience who want to learn Python.
           The class includes written materials, lecture videos, and lots of code exercises to practice Python coding. These materials are used within Google to introduce Python to people who have
           just a little programming experience.</p>
+
+          <br /><br />
+
+          <p><a href="http://www.guru99.com/python-tutorials.html">Guru99</a> - Python Tutorial for Beginners: Learn in 7 Days.</p>
 
           <br /><br />
 
@@ -196,6 +203,11 @@
 
           <br /><br />
 
+          <p><a href="https://courses.p2pu.org/en/groups/python-programming-101/">P2PU | Python Programming 101</a> - With Python, learning to program is easy and fun! Many Python programs are clear and concise, reading like plain English. This course will cover
+            the fundamental aspects of Python including data types, flow control, encapsulation, inheritance, and helpful tools from the Python standard library.</p>
+
+          <br /><br />
+
           <p><a href="http://www.practicepython.org/">Practice Python<a/> was created to provide small, short, and relevant introductory Python programming exercises for beginners.</p>
 
           <br /><br />
@@ -221,11 +233,24 @@
 
           <br /><br />
 
+          <p><a href="https://www.esri.com/training/catalog/57630436851d31e02a43f13c/python-for-everyone/">Python for Everyone</a> by Esri Training - Learn fundamental Python concepts and be introduced to the Python scripting environment in ArcGIS. Tips and techniques to help you master proper Python syntax, script flow,
+            and error handling are presented.</p>
+
+          <br /><br />
+
           <p><a href="https://www.python.org/doc/">Python Foundation Official Documentation</a> Browse the docs online or download a copy of your own.<p>
 
           <br /><br />
 
+          <p><a href="https://open.cs.uwaterloo.ca/python-from-scratch/">Python from Scratch</a> by University of Waterloo - All the materials are designed for the beginning programmer. They are intended to be self-contained. No previous experience is assumed.</p>
+
+          <br /><br />
+
           <p><a href="http://fbkarsdorp.github.io/python-course/">Python Programming for the Humanities</a> by Folgert Karsdorp and Maarten van Gompel.</p>
+
+          <br /><br />
+
+          <p><a href="https://pythonspot.com/">Pythonspot</a> is a complete Python programming tutorial (for both Python 2 and Python 3!). Suitable for both beginner and professional developers.</p>
 
           <br /><br />
 
@@ -241,7 +266,15 @@
 
           <br /><br />
 
+          <p><a href="http://thepythonguru.com/">The Python Guru</a> was created to help students learn python programming easily and fast. We will cover everything you need to become a proficient python developer.</p>
+
+          <br /><br />
+
           <p><a href="http://usingpython.com/">Using Python</a> - Learn Python programming for GCSE Computing by developing solutions to fun and exciting real-world problems.</p>
+
+          <br /><br />
+
+          <p>w3resource - <a href="http://www.w3resource.com/python/python-tutorial.php">Python Tutorial</a>, <a href="http://www.w3resource.com/python-exercises/">Exercise</a></p>, and <a href="http://www.w3resource.com/w3skills/python-beginner-quiz/">Quiz</a>.</p>
 
           <br /><br />
 
