--- a/robotics.html
+++ b/robotics.html
@@ -3,12 +3,12 @@
 <!--
 	Maintainer: monsterb
 	Contact: UNIX.S3C (at) gmail (dot) com
-	URL: http://monsterb.github.io/ -->
+	URL: https://monsterb.github.io/ -->
 <head>
   	<link href="monsterborg.css" media="screen" rel="stylesheet" type="text/css" />
 	<meta charset="utf-8" />
 	<link rel="shortcut icon" href="favicon.png" />
-   <title>monsterb | daemons, gnus, and penguins. Oh my! | Robotics</title>
+   <title>monsterb | daemons, gnus, and penguins. Oh my! | DIY Robotics</title>
   </head>
    <body>
     <div id="container">
@@ -21,18 +21,22 @@
 	     <a href="/notes/index.html">Notes</a>
 	     </div>
 	      <div id="main">
-          <h3>Robotics (4):</h3>
+          <h3>DIY Robotics (6):</h3>
           <br />
           <ul>
-          <li><a href="robotics.html#Blogs">Blogs, Info, News</a> (2)</li>
+          <li><a href="robotics.html#Blogs">Blogs, Info, News</a> (4)</li>
           <li><a href="robotics.htmnl#Events">Events</a> (1)</li>
           <li><a href="robotics.html#Foundations">Foundations</a> (1)</li>
           </ul>
 
           <br /><br /><br /><br />
 
-          <h3><a id="Blogs">Blogs, Info, News</a> (2):</h3>
+          <h3><a id="Blogs">Blogs, Info, News</a> (4):</h3>
           <br />
+          <p><a href="https://diyhacking.com/">DIY Hacking</a> - Check out our open source DIY projects and start building your own projects for Arduino, Raspberry Pi, and Intel Edison today. Each tutorial comes with detailed step by step instructions on how to build them. They are also accompanied with pictures and videos for better understanding.</p>
+          <br /><br />
+          <p><a href="http://www.instructables.com/">instructables</a> is a place that lets you explore, document, and share your creations.</p>
+          <br /><br />
           <p><a href="http://robotshop.com/letsmakerobots/">Let’s Make Robots</a> is the ultimate community site where you can learn about robots / technology, see what others have built, ask questions and get to know others in the community. Our slogan is: LEARN. BUILD. SHARE. and we take pride in calling it a “do it together” as opposed to “do it yourself” site.</p>
           <br /><br />
           <p><a href="http://robohub.org/">Robohub</a> is a non-profit online communication platform that brings together experts in robotics research, start-ups, business, and education from across the globe.</p>
