--- a/bicycles.html
+++ b/bicycles.html
@@ -3,7 +3,7 @@
 <!--
 	Maintainer: monsterb
 	Contact: UNIX.S3C (at) gmail (dot) com
-	URL: http://monsterb.github.io/ -->
+	URL: https://monsterb.github.io/ -->
 <head>
   	<link href="monsterborg.css" media="screen" rel="stylesheet" type="text/css" />
 	<meta charset="utf-8" />
@@ -29,7 +29,7 @@
           <li><a href="bicycles.html#Parts">Bicycles Parts</a> (1)</li>
           <li><a href="bicycles.html#Shops">Bicycles Shops</a> (1)</li>
           </ul>
-
+          
           <br /><br /><br /><br />
 
           <h3><a id="Cruiser">Beach and Vintage Cruisers (13):</h3>
