--- a/ocp/irc.html
+++ b/ocp/irc.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
-<!-- 
+<!--
 	Maintainer: monsterb
 	Contact: UNIX.S3C (at) gmail (dot) com
-	URL: http://monsterb.github.io/ocp/ -->
+	URL: https://monsterb.github.io/ocp/ -->
 <head>
   	<link href="ocp.css" media="screen" rel="stylesheet" type="text/css" />
 	<meta charset="utf-8" />
@@ -25,10 +25,10 @@
 	  <br />
 	  <p>We chat on irc.freenode.net <a href="http://webchat.freenode.net/?channels=oggcastplanet">#oggcastplanet</a> and follow the <a href="http://freenode.net/policy.shtml">General Freenode Policies</a>.</p>
 	      </div>
-	      
+
 	  <div id="playogg"> <a href="http://www.fsf.org/campaigns/playogg/en/"><img src="play_ogg_large.png" alt="Play Ogg" /></a></div>
-	  
-	  <div id="footer"> 
+
+	  <div id="footer">
 	    <p>Copyleft &copy; 2010-2017 Oggcast Planet | CSS3 &#10003; HTML5 &#10003;</p>
 
 	   </div>
