--- a/ocp/ocp_template.html
+++ b/ocp/ocp_template.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
-<!-- 
+<!--
 	Maintainer: monsterb
 	Contact: UNIX.S3C (at) gmail (dot) com
-	URL: http://monsterb.github.io/ocp/ -->
+	URL: https://monsterb.github.io/ocp/ -->
 <head>
   	<link href="ocp.css" media="screen" rel="stylesheet" type="text/css" />
 	<meta charset="utf-8" />
@@ -25,10 +25,10 @@
 	  <br />
 	  <p>.....</p>
 	      </div>
-	      
+
 	  <div id="playogg"> <a href="http://www.fsf.org/campaigns/playogg/en/"><img src="play_ogg_large.png" alt="Play Ogg" /></a></div>
-	  
-	  <div id="footer"> 
+
+	  <div id="footer">
 	    <p>Copyleft &copy; 2010-2017 Oggcast Planet <a href="http://jigsaw.w3.org/css-validator/validator?uri=http%3A%2F%2Foggcastplanet.org%2Focp.css&profile=css3&usermedium=all&warning=1&vextwarning=">CSS3</a> &#10003; <a href="https://validator.w3.org/nu/?doc=http%3A%2F%2Foggcastplanet.org%2F">HTML5</a> &#10003;</p>
 
 	   </div>
