--- a/robotics.html
+++ b/robotics.html
@@ -25,7 +25,7 @@
           <br />
           <ul>
           <li><a href="robotics.html#Blogs">Blogs, Info, News</a> (4)</li>
-          <li><a href="robotics.htmnl#Events">Events</a> (1)</li>
+          <li><a href="robotics.html#Events">Events</a> (1)</li>
           <li><a href="robotics.html#Foundations">Foundations</a> (1)</li>
           </ul>
 
