fix link closing tag

--- a/python-programming.html
+++ b/python-programming.html
@@ -208,7 +208,7 @@
 
           <br /><br />
 
-          <p><a href="http://www.practicepython.org/">Practice Python<a/> was created to provide small, short, and relevant introductory Python programming exercises for beginners.</p>
+          <p><a href="http://www.practicepython.org/">Practice Python</a> was created to provide small, short, and relevant introductory Python programming exercises for beginners.</p>
 
           <br /><br />
 
