new link, pages, notes

--- a/bsd.html
+++ b/bsd.html
@@ -8,7 +8,7 @@
   	<link href="monsterborg.css" media="screen" rel="stylesheet" type="text/css" />
 	<meta charset="utf-8" />
 	<link rel="shortcut icon" href="favicon.png" />
-   <title>monsterb | daemons, gnus, and penguins. Oh my! | Linux Blogs, News, and Tutorials</title>
+   <title>monsterb | daemons, gnus, and penguins. Oh my! | BSD Blogs, Forums, News, and Tutorials</title>
   </head>
    <body>
     <div id="container">
@@ -21,68 +21,28 @@
 	     <a href="/notes/index.html">Notes</a>
 	     </div>
 	      <div id="main">
-          <h3>Linux Blogs, News, and Tutorials (15):</h3>
+          <h3>BSD Blogs, Forums, News, and Tutorials (4):</h3>
           <br />
+          <ul>
+            <li><a href="bsd.html#Blogs">Blogs, Info, News</a> (3)</li>
+            <li><a href="bsd.html#Forums">Forums</a> (1)</li>
+          </ul>
 
-          <p><a href="http://www.2daygeek.com/">2daygeek</a> - Linux Tips, Tricks, How-to Guides, &amp; Tutorials</p>
+<br /><br /><br />
 
-          <br /><br />
+<h3><a id="Blogs">Blogs, Info, News</a> (3):</h3>
+<br />
+<p><a href="http://undeadly.org/">OpenBSD Journal</a> is an awesome resource for the OpenBSD community.</p>
+<br /><br />
+<p><a href="https://planet.freebsd.org/">Planet FreeBSD</a> is an aggregation of FreeBSD-related blogs.</p>
+<br /><br />
+<p><a href="http://www.freebsddiary.org/">The FreeBSD Diary</a> is the largest collection of how-to's, tutorials, and guides for FreeBSD anywhere. However, much of what you will find is generic, and can be easily adapted to any
+  other Unix-like operating system.</p>
 
-          <p><a href="https://www.cyberciti.biz/">nixCraft</a> is an online community of new and seasoned Linux / Unix sysadmins who want to make the most of sysadmin-hood.</p>
+<br /><br /><br /><br />
 
-          <br /><br />
-
-          <p><a href="https://distrowatch.com/">DistroWatch</a> provides news, popularity rankings, and other general information about various BSD Flavors, GNU/Linux distributions, OpenSolaris,
-          and other free software/open source Unix-like operating systems.</p>
-
-          <br /><br />
-
-          <p><a href="http://fossforce.com/">FOSS Force</a> is a news site offering insight into the goings on in the IT world, focusing on the interests of the Open Source community.</p>
-
-          <br /><br />
-
-          <p><a href="https://www.howtoforge.com/">HowtoForge</a> provides user-friendly Linux tutorials.</p>
-
-          <br /><br />
-
-          <p><a href="https://itsfoss.com/">It’s F.O.S.S.</a> is a blog that focuses on Open Source in general and Linux in particular.</p>
-
-          <br /><br />
-
-          <p><a href="http://linoxide.com/">LinOxide</a> is a blog platform where we publish howto articles and guides on linux and unix based distros.</p>
-
-          <br /><br />
-
-          <p><a href="https://linuxconfig.org/">LinuxConfig.org</a> team is determined to provide you with simple to follow Linux tutorials, various tips, tricks and programming guides as well as with GNU/Linux system
-            administration tutorials in general to help you to learn Linux faster and use it with ease. </p>
-
-          <br /><br />
-
-          <p><a href="http://www.omgubuntu.co.uk/">OMG! Ubuntu!</a> is an online news site covering Ubuntu and related activities in the surrounding Linux and open-source eco-systems in an approachable and engaging way.</p>
-
-          <br /><br />
-
-          <p><a href="https://opensource.com/">Opensource.com</a> publishes stories about creating, adopting, and sharing open source solutions.</p>
-
-          <br /><br />
-
-          <p><a href="http://www.osnews.com/">OSNews</a> reports on other technology news, on development issues and articles, hardware, and if it is a slow news day, we might kick in some sci-fi movie news or other stuff we might find interesting.</p>
-
-          <br /><br />
-
-          <p><a href="http://www.tecmint.com/">Tecmint</a>: Linux Howtos, Tutorials, and Guides</p>
-
-          <br /><br />
-
-          <p><a href="http://www.thegeekstuff.com/">The Geek Stuff</a> - How-Tos, troubleshooting tips and tricks Linux and open source technologies.</p>
-
-          <br /><br />
-
-          <p><a href="http://www.webupd8.org/">Web Upd8</a> is an Ubuntu / Linux blog which delivers daily news, tips and application reviews.</p>
-
-          <br /><br />
-
-          <p><a href="http://www.unixmen.com/">Unixmen</a>: Linux/Unix Howtos and Tutorials</p>
+<h3><a id="Forums">Forums</a> (1):</h3>
+<p>DaemonForums <a href="http://daemonforums.org/">http://daemonforums.org/</a></p>
 
 	  <br />
 
