--- a/notes/index.html
+++ b/notes/index.html
@@ -23,6 +23,10 @@
 	      <div id="main">
           <h3>Notes (12):</h3>
           <br />
+          <p><a href="notes013.txt">notes013.txt</a> (20170420) Erase, Format, &amp; Burn Ubuntu Server 16.04 LTS iso to USB Flash Drive on KDE Neon (based on Ubuntu LTS).</p>
+          <br />
+          <p><a href="notes012.txt">notes012.txt</a> (n/a) ZFZ - n/a</p>
+          <br />
           <p><a href="notes011.txt">notes011.txt</a> (20170227) Tanker Pratice Questions gathered from the interwebs.</p>
           <br />
           <p><a href="notes010.txt">notes010.txt</a> (20170213) HazMat Pratice Questions gathered from the interwebs.</p>
