--- a/bsd.html
+++ b/bsd.html
@@ -21,28 +21,35 @@
 	     <a href="/notes/index.html">Notes</a>
 	     </div>
 	      <div id="main">
-          <h3>BSD Blogs, Forums, News, and Tutorials (4):</h3>
+          <h3>BSD Blogs, Forums, News, and Tutorials (7):</h3>
           <br />
           <ul>
-            <li><a href="bsd.html#Blogs">Blogs, Info, News</a> (3)</li>
-            <li><a href="bsd.html#Forums">Forums</a> (1)</li>
+            <li><a href="bsd.html#Blogs">Blogs, Info, News</a> (2)</li>
+            <li><a href="bsd.html#Forums">Forums</a> (2)</li>
+            <li><a href="bsd.html#Planets">Planets</a> (3)</li>
           </ul>
 
 <br /><br /><br />
 
-<h3><a id="Blogs">Blogs, Info, News</a> (3):</h3>
+<h3><a id="Blogs">Blogs, Info, News</a> (2):</h3>
 <br />
 <p><a href="http://undeadly.org/">OpenBSD Journal</a> is an awesome resource for the OpenBSD community.</p>
-<br /><br />
-<p><a href="https://planet.freebsd.org/">Planet FreeBSD</a> is an aggregation of FreeBSD-related blogs.</p>
 <br /><br />
 <p><a href="http://www.freebsddiary.org/">The FreeBSD Diary</a> is the largest collection of how-to's, tutorials, and guides for FreeBSD anywhere. However, much of what you will find is generic, and can be easily adapted to any
   other Unix-like operating system.</p>
 
 <br /><br /><br /><br />
 
-<h3><a id="Forums">Forums</a> (1):</h3>
+<h3><a id="Forums">Forums</a> (2):</h3>
 <p>DaemonForums <a href="http://daemonforums.org/">http://daemonforums.org/</a></p>
+<p>UnitedBSD <a href="https://unitedbsd.com/">https://unitedbsd.com/</a></p>
+
+<br /><br /><br /><br />
+
+<h3><a id="Planets">Planets</a> (3):</h3>
+<p>NetBSD Planet <a href="http://netbsd.fi/">http://netbsd.fi/</a></p>
+<p>Planet FreeBSD <a href="https://planet.freebsd.org/">https://planet.freebsd.org</a></p>
+<p>Planet OpenBSD <a href="http://openbsdnow.org/">http://openbsdnow.org/</a></p>
 
 	  <br />
 
