--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
 	      <div id="main">
           <h3>About:</h3>
           <br />
-          <p>Welcome to monsterb | daemons, gnus, and penguins. Oh my! Formerly known as monsterb.org. This retro style site is a link portal dedicated to BSD, Cyber Security, Emulation, Ethical Hacking, FOSS, GNU, illumos, Information Security, Infosec, IT Security, Linux, Podcasting, Programming, Python, Oggcasting, OpenSource, Scripting, Robotics, Unix, Video Games, and beyond.</p>
+          <p>&nbsp;Welcome to monsterb | daemons, gnus, and penguins. Oh my! Formerly known as monsterb.org. This retro style site is a link portal dedicated to BSD, Cyber Security, Emulation, Ethical Hacking, FOSS, GNU, illumos, Information Security, Infosec, IT Security, Linux, Podcasting, Programming, Python, Oggcasting, OpenSource, Scripting, Robotics, Unix, Video Games, and beyond.</p>
           <br />
           <p>Site Updated: April 30, 2017</p>
 			 <br />
