--- a/blogs.html
+++ b/blogs.html
@@ -21,7 +21,7 @@
 	     <a href="/notes/index.html">Notes</a>
 	     </div>
 	      <div id="main">
-          <h3>Linux Blogs, News, and Tutorials (15):</h3>
+          <h3>Linux Blogs, News, and Tutorials (16):</h3>
           <br />
 
           <p><a href="http://www.2daygeek.com/">2daygeek</a> - Linux Tips, Tricks, How-to Guides, &amp; Tutorials</p>
@@ -75,6 +75,10 @@
           <br /><br />
 
           <p><a href="http://www.thegeekstuff.com/">The Geek Stuff</a> - How-Tos, troubleshooting tips and tricks Linux and open source technologies.</p>
+
+          <br /><br />
+
+          <p><a href="http://www.tuxmachines.org/">Tux Machines</a> is a popular news site focusing on Free/libre and Open Source software, especially GNU/Linux. Founded by Susan (srlinuxx) in 2004, the site aims to share relevant news with its valued community of readers.</p>
 
           <br /><br />
 
