--- a/notes/index.html
+++ b/notes/index.html
@@ -21,7 +21,9 @@
 	     <a href="index.html">Notes</a>
 	     </div>
 	      <div id="main">
-          <h3>Notes (14):</h3>
+          <h3>Notes (15):</h3>
+          <br />
+          <p><a href="notes014.txt">notes014.txt</a> (20170501) What OpenBSD version are you running?</p>
           <br />
           <p><a href="notes013.txt">notes013.txt</a> (20170421) Set 'nomodeset' kernel boot option in grub2.</p>
           <br />
