remove dead links

--- a/ocp/members.html
+++ b/ocp/members.html
@@ -57,10 +57,10 @@
   to do one show, that's great too. Tune in and listen, or submit a show so everyone can listen. May contain explicit material (dirty words) ;) All episodes can be downloaded from the <a href="https://archive.org/details/@juicedpenguin">Internet Archive</a>.</p>
   <h4>Ogg Feed (Dead)</h4></li>
 
- <li><h4><a href="http://kernelpanicoggcast.net">Kernelpanic Oggcast</a></h4>
+ <li><h4>Kernelpanic Oggcast (Dead)</h4>
   <p>Maybe some of you have heard of the Linux Cranks? Maybe not, either way come join six of the old hosts each fortnight as they discuss all the latest linux news, linux gadgets and whatever
   else pops up. Be that basket weaving, fishing, woodworking, recipes, you name it. The Kernelpanic Oggcast is recorded "Live" every fortnight from the KPO Studios @ 10pm EST (give or take) Saturdays, Sunday Arvo's for the Ozzies.</p>
-  <h4><a href="http://www.kernelpanicoggcast.net/rss.xml">Ogg Feed</a></h4></li>
+  <h4>Ogg Feed (Dead)</h4></li>
 
   <li><h4><a href="http://libre.fm/podcast/">Libre.fm</a></h4>
   <p>Every month, Michael Sheldon present the Libre.fm podcast showcasing the most listened to free music on Libre.fm. The Libre.fm podcast is produced using the free software audio suite, Jokosher.</p>
@@ -75,10 +75,10 @@
   <h4>Ogg Feed (Dead)</h4>
   <h4>Speex Feed (Dead)</h4></li>
 
- <li><h4><a href="http://mythtvcast.com">MythTV Cast</a></h4>
+ <li><h4>MythTV Cast (Dead)</h4>
   <p>This show is about MythTV. MythTV is an open-source PVR that allows you to record tv programs (and filter out all the commercials) as well as manage all your media: your photos, music,
   and dvd collection. We will explore all of these features and more throughout this podcast. Please join us as explore this wonderful application.</p>
-  <h4><a href="http://feeds.feedburner.com/MythtvCast">Ogg Feed</a></h4></li>
+  <h4>Ogg Feed (Dead)</h4></li>
 
  <li><h4><a href="gopher://gopher.info-underground.net/1/lostnbronx/palaver">Palaver</a></h4>
   <p>The incoherant babblings of lostnbronx.</p>
