--- a/notes/index.html
+++ b/notes/index.html
@@ -23,6 +23,8 @@
 	      <div id="main">
           <h3>Notes (15):</h3>
           <br />
+          <p><a href="notes015.txt">notes015.txt</a> (20170813) Upload your Garmin Forerunner 10 activities on Linux.</p>
+          <br />
           <p><a href="notes014.txt">notes014.txt</a> (20170501) What OpenBSD version are you running?</p>
           <br />
           <p><a href="notes013.txt">notes013.txt</a> (20170421) Set 'nomodeset' kernel boot option in grub2.</p>
