--- a/video-gaming.html
+++ b/video-gaming.html
@@ -21,7 +21,7 @@
 	     <a href="/notes/index.html">Notes</a>
 	     </div>
 	      <div id="main">
-          <h3>Video Gaming: Linux (25):</h3>
+          <h3>Video Gaming: Linux (26):</h3>
           <br />
           <ul>
           <li><a href="video-gaming.html#Blogs">Blogs, News, Reviews</a> (12)</li>
@@ -29,6 +29,7 @@
           <li><a href="video-gaming.html#Forums">Forums</a> (2)</li>
           <li><a href="video-gaming.html#Platforms">Linux Gaming Platforms</a> (3)</li>
           <li><a href="video-gaming.html#Bundles">Pay What You Want Game Bundles</a> (5)</li>
+          <li><a href="video-gaming.html#Repositories">Repositories</a> (1)</li>
           </ul>
 
           <br /><br /><br /><br />
@@ -83,7 +84,15 @@
           <p><a href="https://indiegamestand.com/">IndieGameStand</a> is a different kind of indie gaming bundle and promotional website. Our site is about featuring and promoting a new independent game every 96 hours for gamers to purchase at a discounted price. That's a new Pay-What-You-Want game sale every few days.</p>
           <br /><br />
           <p><a href="https://www.humblebundle.com/">Humble Bundle</a> is a series of collections ("bundles") of books, games, and music that are sold and distributed online at a price determined by the purchaser and buyers can set the revenue split between the developers, charities and humble bundle organizers.</p>
-	  <br />
+
+          <br /><br /><br /><br />
+
+          <h3><a id="Repositories">Repositories</a> (1):</h3>
+          <br />
+          <p>PlayDeb.net <a href="http://www.playdeb.net/">http://www.playdeb.net/</a></p>
+
+    <br />
+
 
 
 	     </div>
