update copyleft date, add links, add pages

--- a/notes/index.html
+++ b/notes/index.html
@@ -23,6 +23,10 @@
 	      <div id="main">
           <h3>Notes (15):</h3>
           <br />
+          <p><a href="notes017.txt">notes017.txt</a> (20171202) 2012 VW Beetle Base 2.5l CBUA Maintenance Log</p>
+          <br />
+          <p><a href="notes016.txt">notes016.txt</a> (20171202) 2011 Chevrolet Equinox LT 2.4l Maintenance Log</p>
+          <br />
           <p><a href="notes015.txt">notes015.txt</a> (20170813) Upload your Garmin Forerunner 10 activities on Linux.</p>
           <br />
           <p><a href="notes014.txt">notes014.txt</a> (20170501) What OpenBSD version are you running?</p>
@@ -99,7 +103,7 @@
 
 
 	         <div id="footer">
-	           <p>Copyleft &copy; 2006-2017 monsterb | daemons, gnus, and penguins. Oh my! | CSS3 &#10003; HTML5 &#10003;</p>
+	           <p>Copyleft &copy; 2006-2018 monsterb | daemons, gnus, and penguins. Oh my! | CSS3 &#10003; HTML5 &#10003;</p>
 	         </div>
 	  </div>
   </body>
