--- a/podcasts.html
+++ b/podcasts.html
@@ -21,10 +21,10 @@
 	     <a href="/notes/index.html">Notes</a>
 	     </div>
 	      <div id="main">
-          <h3>Netcasts, Oggcasts, Podcasts, Webcasts (101):</h3>
+          <h3>Netcasts, Oggcasts, Podcasts, Webcasts (103):</h3>
           <br />
           <ul>
-          <li><a href="podcasts.html#Automotive">Automotive, Auto Racing, Auto Repair</a> (4)</li>
+          <li><a href="podcasts.html#Automotive">Automotive, Auto Racing, Auto Repair</a> (6)</li>
           <li><a href="podcasts.html#BSD">BSD</a> (3)</li>
           <li><a href="podcasts.html#Comedy">Comedy</a> (7)</li>
           <li><a href="podcasts.html#CyberSecurity">Cyber Security, Forensics, Hacking, InfoSec, PenTesting</a> (24)</li>
@@ -39,9 +39,11 @@
           </ul>
           <br /><br /><br /><br />
 
-          <h3><a id="Automotive">Automotive, Auto Racing, Auto Repair</a> (4):</h3>
+          <h3><a id="Automotive">Automotive, Auto Racing, Auto Repair</a> (6):</h3>
           <p>CarCast <a href="http://carcastshow.com/">http://carcastshow.com/</a> <a href="http://feeds.feedburner.com/Carcast">rss feed</a></p>
           <p>Horsepower Online <a href="http://www.horsepoweronline.com/">http://www.horsepoweronline.com/</a> <a href="http://www.horsepoweronline.com/feed/rss">rss feed</a></p>
+          <p>Skidmarks Show <a href="https://soundcloud.com/skidmarks-show">https://soundcloud.com/skidmarks-show</a></p>
+          <p>Spike's Car Radio <a href="https://www.podcastone.com/spikes-car-radio">https://www.podcastone.com/spikes-car-radio</a></p>
           <p>Street Rod and Custom Radio <a href="http://www.streetrodandcustom.com/">http://www.streetrodandcustom.com/</a> <a href="http://feeds.feedburner.com/streetrodandcustomradio">rss feed</a></p>
           <p>The Drive <a href="http://www.thedrivewithalantaylor.com/">http://www.thedrivewithalantaylor.com/</a> <a href="http://feeds.feedburner.com/thedrivewithalantaylor">rss feed</a></p>
 
@@ -227,7 +229,7 @@
 
 
 	         <div id="footer">
-	           <p>Copyleft &copy; 2006-2017 monsterb | daemons, gnus, and penguins. Oh my! | CSS3 &#10003; HTML5 &#10003;</p>
+	           <p>Copyleft &copy; 2006-2018 monsterb | daemons, gnus, and penguins. Oh my! | CSS3 &#10003; HTML5 &#10003;</p>
 	         </div>
 	  </div>
   </body>
