--- a/python-programming.html
+++ b/python-programming.html
@@ -274,7 +274,7 @@
 
           <br /><br />
 
-          <p>w3resource - <a href="http://www.w3resource.com/python/python-tutorial.php">Python Tutorial</a>, <a href="http://www.w3resource.com/python-exercises/">Exercise</a></p>, and <a href="http://www.w3resource.com/w3skills/python-beginner-quiz/">Quiz</a>.</p>
+          <p>w3resource - <a href="http://www.w3resource.com/python/python-tutorial.php">Python Tutorial</a>, <a href="http://www.w3resource.com/python-exercises/">Exercise</a>, and <a href="http://www.w3resource.com/w3skills/python-beginner-quiz/">Quiz</a>.</p>
 
           <br /><br />
 
